kubectl_deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubidemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubidemo
  template:
    metadata:
      labels:
        app: ubidemo
    spec:
      containers:
      - name: ubidemo
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/dex-engage/railstest-dev-ecr:5.0
        ports:
        - containerPort: 5500
