kubectl_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubidemo-service
  labels:
    app: ubidemo
spec:
  ports:
  - port: 5000
    name: http
    targetPort: 8080
  selector:
    app: ubidemo
